# Urbano-Website

./: .gitignore  404.html  CNAME  Dockerfile  README.md  build.sh  index.html  mkdocs.yml  netlify.toml  papers.bib  pyproject.toml  requirements.txt  serve-docker.bat  serve-docker.command  serve-docker.sh  serve.sh  sitemap.xml  test_attr_list.md  verify.py
.Jules/: palette.md
.github/workflows/: deploy.yml
docs/: download.md  index.md  publications.md
docs/overrides/: main.html
docs/overrides/partials/: header.html  nav.html  progress.html  search.html
docs/stylesheets/: extra.css
download/: index.html
overrides/: main.html
publications/: index.html
search/: search_index.json
stylesheets/: extra.css
