[project]
name = "urbano-website-docs"
version = "0.0.0"
description = "Documentation site for Urbano"
requires-python = ">=3.11"
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-material",
  "mkdocs-multirepo-plugin",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-minify-plugin",
  "mkdocs-git-authors-plugin",
  "mkdocs-git-committers-plugin-2",
  "mkdocs-title-casing-plugin",
  "mkdocs-glightbox",
  "markdown-include",
  "mkdocs-redirects",
  "mkdocs-video",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-bibtex",
  "mkdocs-section-index",
  "mkdocs-include-markdown-plugin",
  "tzdata",
  "pypandoc>=1.16.2",
]
